fix: replace IOUtil with BufferedReader & rm commons-io